--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -35,6 +35,16 @@ spec:
               value: "echo-node-port"
             - name: ECHO_PORT
               value: "8081"
+            - name: SECRET_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  key: spring.user.name
+                  name: spring-secrets
+            - name: SECRET_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  key: spring.user.password
+                  name: spring-secrets
 
 # Deployment for Echo Service
 ---
@@ -106,3 +116,11 @@ spec:
                 name: backend-node-port
                 port:
                   number: 8082
+---
+apiVersion: v1
+kind: Secret
+stringData:
+  spring.user.name: secret_username
+  spring.user.password: s3cr3t_!Pa$$w0rd!
+metadata:
+  name: spring-secrets
